# mcpelauncher-updates

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
Google-Play-API/: CMakeLists.txt
Google-Play-API/include/playapi/util/: http.h
Google-Play-API/lib/playapi/util/: http.cpp
Webserver/: .gitignore  CMakeLists.txt  LICENSE  MimeType.cpp  MimeType.h  armhf.toolchain  firewall.txt  server.cert  server.key  utility.cpp  utility.h
Webserver/Net/: CMakeLists.txt  Net.def  Socket.cpp  Socket.h  SocketListener.cpp  SocketListener.h  TLSSocket.cpp  TLSSocket.h  TLSSocketListener.cpp  TLSSocketListener.h
Webserver/Net/Http/: Connection.h  Header.cpp  Header.h  HeaderImpl.cpp  HeaderImpl.h  Request.cpp  Request.h  Response.cpp  Response.h  Session.h
Webserver/Net/Http/V1/: Connection.cpp  Connection.h  HeaderImpl.cpp  HeaderImpl.h  Http.cpp  Http.h  RequestImpl.cpp  RequestImpl.h  ResponseImpl.cpp  ResponseImpl.h
Webserver/Net/Http/V2/: Connection.cpp  Connection.h  ErrorCode.h  Frame.cpp  Frame.h  HeaderImpl.cpp  HeaderImpl.h  RequestImpl.cpp  RequestImpl.h  ResponseImpl.cpp  ResponseImpl.h  Session.cpp  Session.h  Setting.h  Stream.cpp  Stream.h  Support.h
Webserver/Net/Http/V2/HPack/: Decoder.h  Encoder.h  HPack.cpp  HPack.h
Webserver/WebserverConsole/: CMakeLists.txt  WebserverConsole.cpp  WebserverConsole.org.cpp
Webserver/WebserverVS/: WebserverVS.sln
Webserver/WebserverVS/Http/: Http.vcxproj  Http.vcxproj.filters
Webserver/WebserverVS/Multicaster/: Multicaster.vcxproj  Multicaster.vcxproj.filters  main.cpp
Webserver/WebserverVS/NativeDroid/NativeDroid.NativeActivity/: NativeDroid.NativeActivity.vcxproj  android_native_app_glue.c  android_native_app_glue.h  main.cpp  pch.h
Webserver/WebserverVS/NativeDroid/NativeDroid.Packaging/: NativeDroid.Packaging.androidproj
Webserver/WebserverVS/NativeDroid/NativeDroid.Packaging/res/values/: strings.xml
Webserver/WebserverVS/Net/: Net.vcxproj  Net.vcxproj.filters
Webserver/WebserverVS/PHPSapi/: PHPSapi.cpp  PHPSapi.h  PHPSapi.vcxproj  PHPSapi.vcxproj.filters
Webserver/WebserverVS/Webserver/: RCa08960  Webserver.cpp  Webserver.rc  Webserver.vcxproj  Webserver.vcxproj.filters  resource.h
Webserver/WebserverVS/Webserver.Android/: MainActivity.cs  Webserver.Android.csproj
Webserver/WebserverVS/Webserver.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
Webserver/WebserverVS/Webserver.Android/Resources/: Resource.Designer.cs
Webserver/WebserverVS/Webserver.Android/Resources/values/: Strings.xml
Webserver/WebserverVS/Webserver.Library.Android/: Android.cpp  Android.h  Webserver.Library.Android.vcxproj  Webserver.Library.Android.vcxproj.filters  pch.h
Webserver/WebserverVS/Webserver.UWP/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Webserver.UWP.csproj
Webserver/WebserverVS/Webserver.UWP.WRL/: AboutPage.xaml  AboutPage.xaml.cpp  AboutPage.xaml.h  App.xaml  App.xaml.cpp  App.xaml.h  FileProgress.xaml  FileProgress.xaml.cpp  FileProgress.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  Webserver.UWP.WRL.vcxproj  Webserver.UWP.WRL.vcxproj.filters
Webserver/WebserverVS/Webserver.UWP.WRL/Generated Files/: AboutPage.g.h  AboutPage.g.hpp  AboutPage.xbf  App.g.h  App.g.hpp  App.xbf  FileProgress.g.h  FileProgress.g.hpp  FileProgress.xbf  MainPage.g.h  MainPage.g.hpp  MainPage.xbf  SettingsPage.g.h  SettingsPage.g.hpp  SettingsPage.xbf  XamlTypeInfo.g.cpp
Webserver/WebserverVS/Webserver.UWP/Properties/: AssemblyInfo.cs
Webserver/Website/: index.htm
Webserver/Website/js/: uploader.js
include/hybris/: dlfcn.h
libjnivm/: CMakeLists.txt  LICENSE  README.md
libjnivm/include/: jni.h  jnivm.h
libjnivm/include/baron/: baron.h
libjnivm/include/fake-jni/: fake-jni.h  libraryoptions.h  throwable.h
libjnivm/include/jnivm/: array.h  arrayBase.h  bytebuffer.h  class.h  cpp_void_t.h  env.h  extends.h  field.h  function.h  hookManager.h  javatypes.h  jnitypes.h  method.h  methodhandlebase.h  object.h  removeshared.h  string.h  throwable.h  vm.h  weak.h  wrap.h
libjnivm/include/jnivm/internal/: findclass.h  jValuesfromValist.h  skipJNIType.h
libjnivm/include/jnivm/internal/codegen/: namespace.h  parseJNIType.h
libjnivm/src/baron/: jvm.cpp
libjnivm/src/examples/: CMakeLists.txt
libjnivm/src/examples/fake-jni/: CMakeLists.txt  main.cpp
libjnivm/src/examples/fake-jni-cxx14/: CMakeLists.txt  main.cpp
libjnivm/src/examples/jnivm/: CMakeLists.txt  main.cpp
libjnivm/src/fake-jni/: fake-jni.cpp  jvm.cpp  method.cpp
libjnivm/src/jnivm/: env.cpp  method.cpp  object.cpp  vm.cpp
libjnivm/src/jnivm/internal/: array.cpp  array.hpp  bytebuffer.cpp  bytebuffer.hpp  field.cpp  field.hpp  findclass.cpp  jValuesfromValist.cpp  log.h  method.cpp  method.h  skipJNIType.cpp  string.cpp  string.hpp  stringUtil.cpp  stringUtil.h
libjnivm/src/jnivm/internal/codegen/: class.cpp  field.cpp  method.cpp  namespace.cpp  parseJNIType.cpp  vm.cpp
libjnivm/src/tests/: CodeGen.cpp  Tests.cpp  fake-jni.cpp
src/: client_app_platform.cpp  client_app_platform.h  main.cpp
