cmake_minimum_required (VERSION 2.6)
project (WebServer)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED 17)
find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto)
if(WIN32)
#set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
add_compile_options(/utf-8)
add_compile_options(/EHsc)
#include_directories(C:/OpenSSL-Win32/include)
#link_directories(C:/OpenSSL-Win32/lib/VC)
elseif(UNIX)
include_directories(/usr/local/opt/openssl@1.1/include)
link_directories(/usr/local/opt/openssl@1.1/lib)
endif()

include_directories(.)
add_subdirectory(Net)
add_subdirectory(WebserverConsole)
